Aggregation batching v2